- Added Scourged Earth to the loot table of Plagued Magnataur for the quest The Bad Earth.
- Updated the flags of Scourged Earth to allow every member of a group to loot it.
- Updated the flags of Uncured Caribou Hide to allow every member of a group to loot it.

[2023-02-16]
- Updated the respawn time of Amani Vase.
- Updated the respawn time of Eagle Figurine.

[2023-02-18]
- Updated the smart script for Ironhide to give every member of a group credit for the quest The Conquest Pit: Bear Wrestling!
- Updated the smart script for Torgg Thundertotem to give every member of a group credit for the quest The Conquest Pit: Mad Furbolg Fighting.
- Updated the smart script for Rustblood to give every member of a group credit for the quest The Conquest Pit: Blood and Metal.
- Updated the smart script for Horgrenn Hellcleave to give every member of a group credit for the quest The Conquest Pit: Death Is Likely.
- Updated the smart script for Conqueror Krenna to give every member of a group credit for the quest The Conquest Pit: Final Showdown.

[2023-02-21]
- Updated the smart script for Chicken Escapee to give every member of a group the quest item.
- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Drone for the quest Mischief in the Making.
- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Wasp for the quest Mischief in the Making.
- Updated the flags of Skyreach Crystal Cluster to allow every member of a group to loot it.

[2023-03-01]
- Updated the respawn time of Small Proto-Drake Egg.

[2023-03-02]
- Updated the smart script for Dead Iron Giant to give every member of a group the quest item.
- Added Horn Fragment to the loot table of Restless Frostborn Warrior for the quest In Memoriam.
- Added Horn Fragment to the loot table of Restless Frostborn Ghost for the quest In Memoriam.
- Updated the flags of Horn Fragment to allow every member of a group to loot it.